quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
typedef struct ComplexMatrix4
{
    qreal real[4][4];
    qreal imag[4][4];
} ComplexMatrix4;
typedef struct ComplexMatrixN
{
  int numQubits;
  qreal **real;
  qreal **imag;
} ComplexMatrixN;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
Qureg createQureg(int numQubits, QuESTEnv env);
Qureg createDensityQureg(int numQubits, QuESTEnv env);
Qureg createCloneQureg(Qureg qureg, QuESTEnv env);
void destroyQureg(Qureg qureg, QuESTEnv env);
ComplexMatrixN createComplexMatrixN(int numQubits);
void destroyComplexMatrixN(ComplexMatrixN matr);
void initComplexMatrixN(ComplexMatrixN m, qreal real[][1<<m.numQubits], qreal imag[][1<<m.numQubits]);
void reportQuregParams(Qureg qureg);
void initZeroState(Qureg qureg);
void cloneQureg(Qureg targetQureg, Qureg copyQureg);
QuESTEnv createQuESTEnv(void);
Complex getDensityAmp(Qureg qureg, long long int row, long long int col);
void multiQubitUnitary(Qureg qureg, int* targs, int numTargs, ComplexMatrixN u);
void mixMultiQubitKrausMap(Qureg qureg, int* targets, int numTargets, ComplexMatrixN* ops, int numOps);
void applyMatrixN(Qureg qureg, int* targs, int numTargs, ComplexMatrixN u);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);
#define getStaticComplexMatrixN(numQubits, re, im) \
    bindArraysToStackComplexMatrixN( \
        numQubits, \
        (qreal[1<<numQubits][1<<numQubits]) UNPACK_ARR re, \
        (qreal[1<<numQubits][1<<numQubits]) UNPACK_ARR im, \
        (double*[1<<numQubits]) {NULL}, (double*[1<<numQubits]) {NULL} \
    )