quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Creates a density matrix Qureg object representing a set of qubits which"]
    #[doc = " can enter noisy and mixed states."]
    #[doc = ""]
    #[doc = " Allocates space for a matrix of complex amplitudes, which assuming a single"]
    #[doc = " ::qreal floating-point number requires <b>qrealBytes</b>, requires memory"]
    #[doc = " \\f["]
    #[doc = "      \\text{qrealBytes} \\times 2 \\times 2^{2 \\times\\text{numQubits}}\\;\\;\\text{(bytes)},"]
    #[doc = " \\f]"]
    #[doc = " though there are additional memory costs in GPU and distributed modes."]
    #[doc = " Notice this is the memory cost of a state-vector created with createQureg()"]
    #[doc = " of twice as many qubits."]
    #[doc = ""]
    #[doc = " The returned ::Qureg begins in the zero state, as produced by initZeroState()."]
    #[doc = ""]
    #[doc = " Once created, the following ::Qureg fields are relevant in all backends:"]
    #[doc = " - Qureg.numQubitsRepresented"]
    #[doc = " - Qureg.isDensityMatrix"]
    #[doc = ""]
    #[doc = " Behind the scenes, density matrice are stored as state-vectors, flattened column-wise."]
    #[doc = " As such, individual amplitudes should be fetched with getDensityAmp(), in lieu"]
    #[doc = " of direct access."]
    #[doc = " \\n"]
    #[doc = ""]
    #[doc = " > ::QuESTEnv \\p env must be prior created with createQuESTEnv()."]
    #[doc = ""]
    #[doc = " ### Serial"]
    #[doc = " In serial and local (non-distributed) multithreaded modes, a density matrix \\p Qureg"]
    #[doc = " costs only the memory above. For example, at double precision"]
    #[doc = " (#QuEST_PREC <b>= 2</b>, <b>qrealBytes = 8</b>), the memory costs are:"]
    #[doc = " \\p numQubits  | memory"]
    #[doc = " ------------- | -------------"]
    #[doc = " 10            | 16 MiB"]
    #[doc = " 12            | 256 MiB"]
    #[doc = " 14            | 4 GiB"]
    #[doc = " 16            | 64 GiB"]
    #[doc = " 18            | 1 TiB"]
    #[doc = " 20            | 16 TiB"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " ### GPU"]
    #[doc = ""]
    #[doc = " In GPU-accelerated mode, an <em>additional</em> density matrix is created in GPU memory."]
    #[doc = " Therefore both RAM and VRAM must be of sufficient memory to store the state-vector,"]
    #[doc = " each of the size indicated in the Serial table above."]
    #[doc = ""]
    #[doc = " > Note that many GPUs do not support quad precision ::qreal."]
    #[doc = ""]
    #[doc = " ### Distributed"]
    #[doc = ""]
    #[doc = " In distributed mode, the density matrix is uniformly partitioned between the <b>N</b>"]
    #[doc = " distributed nodes (column-wise)."]
    #[doc = ""]
    #[doc = " > Only a power-of-2 number of nodes <b>N</b> may be used (e.g. <b>N = 1, 2, 4, 8, </b>...)."]
    #[doc = " > There must additionally be at least 1 amplitude of a density matrix stored on each node."]
    #[doc = " > This means one cannot create a density matrix ::Qureg with fewer than \\f$\\log_2(\\text{N})/2\\f$ qubits."]
    #[doc = ""]
    #[doc = " Additional memory is allocated on each node for communication buffers, of size"]
    #[doc = " equal to the density matrix partition."]
    #[doc = " Hence the total memory <em>per-node</em> required is:"]
    #[doc = " \\f["]
    #[doc = "      2 \\times \\text{qrealBytes} \\times 2 \\times 2^{2\\times\\text{numQubits}}/N  \\;\\;\\text{(bytes)},"]
    #[doc = " \\f]"]
    #[doc = ""]
    #[doc = " For example, at double precision"]
    #[doc = " (#QuEST_PREC <b>= 2</b>, <b>qrealBytes = 8</b>), the memory costs are:"]
    #[doc = ""]
    #[doc = " | \\p numQubits | memory per node  |||||"]
    #[doc = " |-------------|-------|-------|-------|--------| ------ |"]
    #[doc = " |            | <b>N = 2</b>  | <b>N = 4</b> | <b>N = 8</b> | <b>N = 16</b> | <b>N = 32</b> |"]
    #[doc = " | 10           | 16 MiB | 8 MiB | 4 MiB | 2 MiB  | 1 MiB  |"]
    #[doc = " | 15           | 16 GiB | 8 GiB | 4 GiB | 2 GiB  | 1 GiB  |"]
    #[doc = " | 20           | 16 TiB | 8 TiB | 4 TiB | 2 TiB  | 1 TiB  |"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createQureg() to create a state-vector of the equivalent number of qubits, with a square-root memory cost"]
    #[doc = " - createCloneQureg() to create a new qureg of the size and state of an existing qureg."]
    #[doc = " - destroyQureg() to free the allocated \\p Qureg memory."]
    #[doc = " - reportQuregParams() to print information about a ::Qureg."]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @returns an object representing the set of qubits"]
    #[doc = " @param[in] numQubits number of qubits in the system"]
    #[doc = " @param[in] env object representing the execution environment (local, multinode etc)"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numQubits <= 0"]
    #[doc = " - if \\p numQubits is so large that the number of amplitudes cannot fit in a long long int type,"]
    #[doc = " - if in distributed mode, there are more nodes than elements in the would-be state-vector"]
    #[doc = " @throws exit"]
    #[doc = " - if in GPU mode, but GPU memory cannot be allocated."]
    #[doc = " @author Tyson Jones"]
    pub fn createDensityQureg(numQubits: ::std::os::raw::c_int, env: QuESTEnv) -> Qureg;
}
extern "C" {
    #[doc = " Create a new ::Qureg which is an exact clone of the passed qureg, which can be"]
    #[doc = " either a state-vector or a density matrix."]
    #[doc = ""]
    #[doc = " The returned \\ref Qureg will have the same"]
    #[doc = " dimensions as the passed \\p qureg and begin in an identical quantum state."]
    #[doc = " This must be destroyed by the user later with destroyQureg()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - destroyQureg()"]
    #[doc = " - cloneQureg()"]
    #[doc = " - createQureg()"]
    #[doc = " - createDensityQureg()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @returns an object representing the set of qubits"]
    #[doc = " @param[in] qureg an existing \\ref Qureg to be cloned"]
    #[doc = " @param[in] env the ::QuESTEnv"]
    #[doc = " @author Tyson Jones"]
    pub fn createCloneQureg(qureg: Qureg, env: QuESTEnv) -> Qureg;
}
extern "C" {
    #[doc = " Deallocate a ::Qureg, freeing its memory."]
    #[doc = ""]
    #[doc = " This frees all memory bound to \\p qureg, including its state-vector or"]
    #[doc = " density matrix in RAM, in VRAM (in GPU mode), and communication buffers"]
    #[doc = " (in distributed mode)."]
    #[doc = ""]
    #[doc = " The \\p qureg must have been previously created with createQureg(),"]
    #[doc = " createDensityQureg() or createCloneQureg()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createQureg()"]
    #[doc = " - createDensityQureg()"]
    #[doc = " - createCloneQureg()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in,out] qureg the ::Qureg to be destroyed"]
    #[doc = " @param[in] env the ::QuESTEnv"]
    #[doc = " @author Ania Brown"]
    #[doc = " @author Tyson Jones (improved doc)"]
    pub fn destroyQureg(qureg: Qureg, env: QuESTEnv);
}
extern "C" {
    #[doc = " Allocate dynamic memory for a square complex matrix of any size,"]
    #[doc = " which can be passed to functions like multiQubitUnitary() and applyMatrixN()."]
    #[doc = ""]
    #[doc = " The returned matrix will have dimensions"]
    #[doc = " \\f["]
    #[doc = "      2^{\\text{numQubits}} \\times 2^{\\text{numQubits}},"]
    #[doc = " \\f]"]
    #[doc = " stored as nested arrays ComplexMatrixN.real and ComplexMatrixN.imag,"]
    #[doc = " initialised to zero."]
    #[doc = ""]
    #[doc = " Unlike a ::Qureg, the memory of a ::ComplexMatrixN is always stored in RAM,"]
    #[doc = " and non-distributed. Hence, elements can be directly accessed and modified:"]
    #[doc = " ```"]
    #[doc = " int numQubits = 5;"]
    #[doc = " int dim = (1 << numQubits);"]
    #[doc = " ComplexMatrixN m = createComplexMatrixN(numQubits);"]
    #[doc = ""]
    #[doc = " for (int r=0; r<dim; r++) {"]
    #[doc = "     for (int c=0; c<dim; c++) {"]
    #[doc = "         m.real[r][c] = rand();"]
    #[doc = "         m.imag[r][c] = rand();"]
    #[doc = "     }"]
    #[doc = " }"]
    #[doc = " ```"]
    #[doc = " \\n"]
    #[doc = " A ::ComplexMatrixN can be initialised in bulk using initComplexMatrixN(),"]
    #[doc = " though this is not C++ compatible."]
    #[doc = ""]
    #[doc = " Like ::ComplexMatrix2 and ::ComplexMatrix4 (which are incidentally stored in the stack),"]
    #[doc = " the returned ::ComplexMatrixN is safe to return from functions."]
    #[doc = ""]
    #[doc = " > The ::ComplexMatrixN must eventually be freed using destroyComplexMatrixN(),"]
    #[doc = " > since it is created in the dynamic heap. One can instead use getStaticComplexMatrixN()"]
    #[doc = " > to create a ComplexMatrixN struct in the stack (which doesn't need to be later destroyed),"]
    #[doc = " > though this may cause a stack overflow if the matrix is too large (approx 10+ qubits)."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - destroyComplexMatrixN()"]
    #[doc = " - getStaticComplexMatrixN()"]
    #[doc = " - initComplexMatrixN()"]
    #[doc = " - applyMatrixN()"]
    #[doc = " - multiQubitUnitary()"]
    #[doc = " - mixMultiQubitKrausMap()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] numQubits the number of qubits of which the returned ComplexMatrixN will correspond"]
    #[doc = " @returns a dynamic ComplexMatrixN struct, that is one where the .real and .imag"]
    #[doc = "  fields are arrays kept in the heap and must be later destroyed."]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numQubits <= 0"]
    #[doc = " - if the memory was not allocated successfully"]
    #[doc = " @author Tyson Jones"]
    pub fn createComplexMatrixN(numQubits: ::std::os::raw::c_int) -> ComplexMatrixN;
}
extern "C" {
    #[doc = " Destroy a ComplexMatrixN instance created with createComplexMatrixN()"]
    #[doc = ""]
    #[doc = " It is invalid to attempt to destroy a matrix created with getStaticComplexMatrixN()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - getStaticComplexMatrixN()"]
    #[doc = " - createComplexMatrixN()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] matr the dynamic matrix (created with createComplexMatrixN()) to deallocate"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p matr was not yet allocated."]
    #[doc = " @throws malloc_error"]
    #[doc = " -  if \\p matr was static (created with getStaticComplexMatrixN())"]
    #[doc = " @author Tyson Jones"]
    pub fn destroyComplexMatrixN(matr: ComplexMatrixN);
}
